# payment_processor

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: async_bridge.rs
payments-core/: Cargo.toml  README.md
payments-core/src/: error.rs  ledger.rs  lib.rs  source.rs  types.rs
src/: csv_source.rs  error.rs  lib.rs  main.rs  output.rs  processor.rs
tests/: api_surface.rs  golden.rs  integration.rs
tests/common/: mod.rs
tests/fixtures/: async_expected.csv  async_file1.csv  async_file2.csv  chargeback.csv  comprehensive.csv  dispute_resolve.csv  expected.csv  precision.csv  transactions.csv  whitespace.csv
